[gd_scene load_steps=9 format=2]

[ext_resource path="res://Audio/Sounds/Sounds/powerUp2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Items.gd" type="Script" id=2]
[ext_resource path="res://PixelAdventure/Pixel Adventure 1/Free/Items/Fruits/Collected.png" type="Texture" id=3]
[ext_resource path="res://PixelAdventure/Pixel Adventure 1/Free/Items/Fruits/Apple.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "collected"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("apple:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("apple:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("apple:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "motion"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("apple:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("apple:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("apple:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[node name="Apple" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="apple" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 17
frame = 16

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.07, -2 )
scale = Vector2( 0.85, 1 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "motion"
playback_speed = 1.5
anims/RESET = SubResource( 2 )
anims/collected = SubResource( 4 )
anims/motion = SubResource( 3 )

[node name="collectFx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -1.0
area_mask = 0

[connection signal="body_entered" from="." to="." method="_on_items_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
